@startuml

' ---------------------------------------
' Entidades (Representan el Estado / Datos)
' ---------------------------------------
class UserEntity {
  - id{CK}: number
  - nombre: string
  - apellido: string
  - email: string
  - contrasena: string
  - telefono: string
  - rol: Role
}

class Publication {
  - id{CK}: number
  - name: string
  - lote: string
  - expirationDate: Date
  - description: string
  - type: string
  - isActive: boolean
}

' ---------------------------------------
' Servicios (Representan el Comportamiento / Lógica)
' ---------------------------------------
class UsersService {
  + login(loginDto: LoginDto): Object
  + register(registerDto: RegisterDto): Object
}

class PublicationsService {
  + create(dto: CreatePublicationDto): Publication
  + findAll(): Publication[]
  + findByUser(userId: number): Publication[]
  + findByInitialText(term: string): Publication[]
  + update(id: number, dto: UpdatePublicationDto): Publication
  + remove(id: number): Publication
}

' ---------------------------------------
' Asociaciones (Trazabilidad)
' ---------------------------------------

' Los servicios gestionan a las entidades (Asociación Simple)
UsersService "1" --> "1" UserEntity : gestiona >
PublicationsService "1" --> "0..*" Publication : gestiona >

' Relación de Agregación: Un usuario agrupa/tiene muchas publicaciones
UserEntity "1" o-- "0..*" Publication : publica >

@enduml
